# rust-ecommerce

./: .env  Cargo.toml  LICENSE
src/: db.rs  main.rs
src/handlers/: products.rs
src/models/: product.rs
src/routes/: products.rs
